test/functions/diten/refIntentWithNonLvalue.good
refIntentWithNonLvalue.chpl:5: error: non-lvalue actual passed to ref argument
