test/functions/diten/refIntentWithNonLvalue.chpl
proc f(ref x) {
  writeln("f(", x, ")");
}

f(1);
